--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 .AddType .css * {
   scroll-behavior: smooth;
   box-sizing: border-box;
-  padding: 0px;
-  margin: 0px;
-  scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
 }
 body {
   margin: 0;
@@ -28,7 +27,6 @@ li {
   width: 100%;
   height: max-content;
   background: linear-gradient(to bottom, #c491f4d5, #14052de3);
-  position: relative;
   z-index: 10000;
   position: fixed;
   top: 0;
